--- a/docker-compose-working-conf2.yml
+++ b/docker-compose-working-conf2.yml
@@ -2,25 +2,19 @@ version: '3.7'
 
 services:
   zookeeper:
-    #image: quay.io/debezium/zookeeper:2.4
-    image: bitnami/zookeeper:latest
-    network_mode: "host"
+    image: quay.io/debezium/zookeeper:2.4
     ports:
       - "2181:2181"
       #- "2888:2888"
       #- "3888:3888"
-    environment:
-      - ZOO_ADMIN_SERVER_PORT_NUMBER=8030
-      - ALLOW_ANONYMOUS_LOGIN=yes
 
   kafka: 
     image: quay.io/debezium/kafka:2.4
-    network_mode: "host"
     ports:
       - "9092:9092"
       - "9093:9093"
     environment:
-      - KAFKA_ADVERTISED_LISTENERS=INSIDE://localhost:9092,OUTSIDE://localhost:9092
+      - KAFKA_ADVERTISED_LISTENERS=INSIDE://kafka:9092,OUTSIDE://localhost:9092
       - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       - KAFKA_LISTENERS=INSIDE://0.0.0.0:9092,OUTSIDE://0.0.0.0:9093
       - KAFKA_INTER_BROKER_LISTENER_NAME=INSIDE
@@ -28,8 +22,7 @@ services:
       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
       - KAFKA_LOG_RETENTION_HOURS=168
       - KAFKA_LOG_SEGMENT_BYTES=1073741824
-      - ZOOKEEPER_CONNECT=127.0.0.1:2181
-    #  - ZOOKEEPER_CONNECT=zookeeper:2181
+      - ZOOKEEPER_CONNECT=zookeeper:2181
     #links:
     #  - zookeeper
     depends_on:
@@ -37,12 +30,13 @@ services:
 
   kafka-connect:
     image: quay.io/debezium/connect:2.4
-    network_mode: "host"
     ports:
       - "8083:8083"
+    links:
+      - kafka
     environment:
       - GROUP_ID=1
-      - BOOTSTRAP_SERVERS=127.0.0.1:9092
+      - BOOTSTRAP_SERVERS=kafka:9092
       - REST_PORT=8083
       - REST_ADVERTISED_HOST_NAME=localhost
       - CONFIG_STORAGE_TOPIC=my_connect_configs
