--- a/docker-compose-working-conf1.yml
+++ b/docker-compose-working-conf1.yml
@@ -46,10 +46,10 @@ services:
       - DEBEZIUM_CONFIG_CONNECTOR_CLASS=io.debezium.connector.postgresql.PostgresConnector
       - DEBEZIUM_CONFIG_DATABASE_HOSTNAME=127.0.0.1
       - DEBEZIUM_CONFIG_DATABASE_PORT=5432
-      - DEBEZIUM_CONFIG_DATABASE_PASSWORD=creation
-      - DEBEZIUM_CONFIG_DATABASE_USER=postgres
-      - DEBEZIUM_CONFIG_DATABASE_SERVER_NAME=postgres
-      - DEBEZIUM_CONFIG_DATABASE_DBNAME=bdi_dev
+      - DEBEZIUM_CONFIG_DATABASE_PASSWORD=<your_password>
+      - DEBEZIUM_CONFIG_DATABASE_USER=<your_user>
+      - DEBEZIUM_CONFIG_DATABASE_SERVER_NAME=<server_postgres>
+      - DEBEZIUM_CONFIG_DATABASE_DBNAME=<your_dbname>
       # - GROUP_ID=1
       # - BOOTSTRAP_SERVERS=kafka:9092
       # - REST_PORT=8083
